--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -244,7 +244,7 @@ Game.connect = (function (host) {
                 Game.direction = 'none';
                 break;
             case 'kill':
-                Console.log(' 爆头~屌爆了...');
+                Console.log('你kill了一只可爱的小蛇蛇...');
                 break;
         }
     };
