修复个激活蛇的bug。

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -238,6 +238,11 @@ Game.connect = (function (host) {
                     Game.updateSnake(packet.data[i].id, packet.data[i].body);
                 }
                 break;
+            case 'playinginfo':
+                for (var j = 0; j < packet.data.length; j++) {
+                    Game.addSnake(packet.data[j].id, packet.data[j].color);
+                }
+                break;
             case 'join':
                 for (var j = 0; j < packet.data.length; j++) {
                     Game.addSnake(packet.data[j].id, packet.data[j].color);
