--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -144,9 +144,7 @@ Game.draw = function () {
     }
 };
 
-var meid ;
 Game.addSnake = function (id, color) {
-	meid = id;
     Game.entities[id] = new Snake();
     Game.entities[id].color = color;
 };
@@ -253,9 +251,9 @@ Game.connect = (function (host) {
 				Console.log('退出了一条小蛇蛇....'+packet.id);
                 break;
             case 'dead':
-                Console.log('小蛇蛇 '+packet.id+' 死了....拜拜...');
                 Game.removeSnake(packet.id);
-                Game.direction = 'none';
+                Console.log('小蛇蛇 '+packet.id+' 死了....拜拜...');
+                //Game.direction = 'none';
                 break;
             case 'suicide':
                 Console.log('恭喜你,完美的追了自己的尾...^_^');
