去掉一些错误的同步方法。

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -276,7 +276,7 @@ Game.connect = (function (host) {
                 Game.direction = 'none';
                 break;
             case 'kill':
-                Console.log('你kill了一只可爱的小蛇蛇...');
+                Console.log('你杀了一只可爱的小蛇蛇...');
                 break;
         }
     };
