--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -1,3 +1,4 @@
+<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8" isELIgnored="false" %>
 <!DOCTYPE html>
 <script type="text/javascript" src="jquery/jquery-1.9.0.js"></script>
 <script type="text/javascript" src="jquery/jquery.atmosphere.js"></script>
