--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -1,4 +1,3 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8" isELIgnored="false" %>
 <!DOCTYPE html>
 <script type="text/javascript" src="jquery/jquery-1.9.0.js"></script>
 <script type="text/javascript" src="jquery/jquery.atmosphere.js"></script>
@@ -41,6 +40,8 @@
 <noscript><h2 style="color: #ff0000">Seems your browser doesn't support Javascript! Websockets rely on Javascript being
     enabled. Please enable
     Javascript and reload this page!</h2></noscript>
+    <h3 style="color: red;">生存守则:不要撞别人的身体^_^</h3>
+    <hr>
 <div style="float: left">
     <canvas id="playground" width="800" height="600"></canvas>
 </div>
@@ -72,6 +73,7 @@ Snake.prototype.draw = function (context) {
     	if(isfirst){
     		isfirst = false;
 	        context.fillStyle = this.headcolor;
+	        context.fillText(this.name,this.snakeBody[id].x+12, this.snakeBody[id].y);
 	       /*  switch (Game.direction) { TODO 先不画名字
 		        case 'up':
 			        context.fillText(myname,this.snakeBody[id].x+12, this.snakeBody[id].y);
@@ -171,6 +173,7 @@ Game.addSnake = function (id, color, headcolor) {
 Game.updateSnake = function (id, snakeBody) {
     if (typeof Game.entities[id] != "undefined") {
         Game.entities[id].snakeBody = snakeBody;
+        Game.entities[id].name = id;
     }
 };
 
